proof of concept addition of comments/likes on missions

--- a/src/views/mission/detail-window.html
+++ b/src/views/mission/detail-window.html
@@ -129,6 +129,18 @@
               <div class="g-plus social-button" data-action="share" data-annotation="none"></div>
               <a href="https://twitter.com/share" class="twitter-share-button" data-hashtags="droneshare" data-count="none"></a>
             </span>
+
+            <!-- <h5>Add files/video:</h5>
+            <div data-hull-component="uploads/image@hull" data-hull-id="entity:mission/{{record.id}}"></div>
+
+            <div data-hull-component="uploads/video@hull" data-hull-id="entity:mission/{{record.id}}"></div> -->
+
+            <h5>Comments:</h5>
+            <!--<div data-hull-component="utils/flag@hull" data-hull-id="entity:mission/{{record.id}}"></div> -->
+
+            <!--<div data-hull-component="likes/button@hull" data-hull-id="entity:mission/{{record.id}}"></div> -->
+            <!--<div data-hull-component="share/button@hull" data-hull-text="A droneshare flight" data-hull-url="http://www.droneshare.com/mission/{{record.id}}" data-hull-providers='facebook,google,twitter'></div> -->
+            <div data-hull-component="comments/list@hull" data-hull-id="entity:mission/{{record.id}}"></div>
           </div>
         </div>
 
